samples/_failures_safe/1761657351_689445_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_992f1f1b.c: In function ‘main’:
./samples/SAFE/__tmp_992f1f1b.c:169:15: error: expected ‘;’ at end of input
  169 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_992f1f1b.c:169:9: error: expected declaration or statement at end of input
  169 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_992f1f1b.c:169:9: error: expected declaration or statement at end of input
